--- a/configs/object_tracking_eval.yaml
+++ b/configs/object_tracking_eval.yaml
@@ -1,9 +1,9 @@
 pretrained_model_path: "./stable-diffusion-v1-4"
-root_path: "/staging/leuven/stg_00116/modelscope/text-to-video"
+root_path: "./modelscope/text-to-video"
 
 eval_data:
   name: object_tracking
-  path: "/data/leuven/333/vsc33366/projects/Diffusion-Video/dataset"
+  path: "./dataset"
   datasets:
     - "got10k"
   n_sample_frames: 8 
